--- a/html/LandingPage.html
+++ b/html/LandingPage.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Elder Living | Landing Page</title>
-  <link rel="icon" type="image/png" sizes="32x32" href="/assets/elder-living-logo.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="../assets/elder-living-logo.png">
   <link rel="stylesheet" href="../css/LandingPage.css">
   <link rel="stylesheet" href="../javascript/LandingPage.js">
   <link rel="preconnect" href="https://fonts.googleapis.com">
